# mathematics

./: .gitignore  README.md
binary-mask-from-polygon/: CMakeLists.txt
binary-mask-from-polygon/binary-mask-from-polygon/: algorithms.hpp  main.cpp
interpolation/: CMakeLists.txt
interpolation/interpolation/: main.cpp
point-in-polygon/point-in-polygon/: main.cpp
ransac-fit-plane/: CMakeLists.txt  build.sh
ransac-fit-plane/ransac-fit-plane/: main.cpp
shoelace-algorithm/: CMakeLists.txt  README.md  build.sh
shoelace-algorithm/shoelace-algorithm/: main.cpp
