cmake_minimum_required(VERSION 3.18)
project(binary-mask-from-polygon)
# without the line below, it won't work as it can't find opencv
set(OpenCV_DIR /Users/stanathong/Dev/Library/install/lib/cmake/opencv4)
find_package( OpenCV REQUIRED )
find_package( Eigen3 3.3 REQUIRED NO_MODULE)
MESSAGE(STATUS "Include dirs ${OpenCV_INCLUDE_DIRS}")
MESSAGE(STATUS "Include dirs ${Eigen_INCLUDE_DIRS}")
MESSAGE(STATUS "Link libraries ${OpenCV_LIBS}")
include_directories( ${OpenCV_INCLUDE_DIRS} )
include_directories( ${Eigen_INCLUDE_DIRS} )
file(GLOB_RECURSE sources binary-mask-from-polygon/*)
add_executable(${PROJECT_NAME} ${sources})
target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBS} Eigen3::Eigen )
target_compile_features(${PROJECT_NAME} PUBLIC cxx_std_17 )
